--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,intellij,java,eclipse,maven
+
+.idea/
